# plato-gpu-image

./: .gitignore  AGENTS.md  README.md  plato-gpu-image.py  pyproject.toml
benchmarks/: run_backend_benchmarks.py
scripts/: compare_hdf5_structure.py  preview_hdf5_side_by_side.py  validate_legacy_config.py
src/backends/: __init__.py
src/core/: simulation.py
src/platosim_py/backends/: __init__.py  cupy_backend.py  numpy_backend.py  protocol.py
src/platosim_py/config/: compatibility.py
src/platosim_py/core/: simulation.py
src/platosim_py/io/: hdf5.py
src/simio/: hdf5.py
tests/: __init__.py  conftest.py  output_paths.py
tests/input_file/: star_catalog_mag.txt  star_catalog_small.txt
tests/input_yaml/: legacy_alias_ra_dec.yaml  minimal_invalid.yaml  minimal_valid.yaml
tests/parity/: test_input_compatibility.py  test_legacy_binary_runner.py  test_structure_parity.py
tests/perf/: test_perf_legacy_vs_local.py
tests/unit/: test_backends.py  test_cli.py  test_compare_hdf5_structure_script.py  test_hdf5_io.py  test_preview_hdf5_side_by_side_script.py  test_simulation.py  test_validate_script.py
