[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "plato-gpu-image"
version = "0.1.0"
description = "Pure-Python PLATO image simulation engine with optional CUDA backend and full legacy input compatibility"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "plato-gpu-image Team" }
]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "h5py>=3.10",
  "PyYAML>=6.0",
  "pydantic>=2.7",
  "typing-extensions>=4.10"
]

[project.optional-dependencies]
cuda = [
  "cupy-cuda12x>=13.0"
]
accel = [
  "numba>=0.59"
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10"
]

[project.urls]
Repository = "https://github.com/nico4github/plato-gpu-image"

[tool.hatch.build.targets.wheel]
packages = ["src/platosim_py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
